--- a/templates/index.html
+++ b/templates/index.html
@@ -16,12 +16,12 @@
       <h1>SBERT retrieval demo</h1>
       <div class="row mt-3">
 	<div class="col-12">
-	  Write a sentence; the demo will retrieve the top most similar sentences from a dataset of 400 million sentences.
+	  Write a sentence; the demo will retrieve the top most similar sentences from a dataset of 400 million sentences. (Note: all sentences shorter than 3 words have been removed)
 	</div>
       </div>
       <div class="row mt-3">
 	<div class="col-12">
-	  <textarea class="form-control" placeholder="lause" id="sentencein">Tämän viikonloppuna vietetään pääsiäistä, johon kuuluu paljon perinteitä ja herkkuja.</textarea>
+	  <textarea class="form-control" placeholder="lause" id="sentencein">Minusta Turussa on ihana asua!</textarea>
 	</div>
       </div>
       <div class="row mt-3">
